add getComputerChoice method

--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/batu.png" alt="batu"></p>
+                <p class="text-center"><img src="img/rock.png" alt="rock"></p>
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="text-center"><img src="img/batu.png" alt="batu"></p>
+                <p class="text-center"><img src="img/rock.png" alt="rock"></p>
             </div>
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/kertas.png" alt="kertas"></p>
+                <p class="text-center"><img src="img/paper.png" alt="paper"></p>
             </div>
             <div class="col">
                 <h1 class="text-center game-result">vs</h1>
             </div>
             <div class="col">
-                <p class="text-center"><img src="img/kertas.png" alt="kertas"></p>
+                <p class="text-center"><img src="img/paper.png" alt="paper"></p>
             </div>
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/gunting.png" alt="gunting"></p>
+                <p class="text-center"><img src="img/scissor.png" alt="scissor"></p>
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="text-center"><img src="img/gunting.png" alt="gunting"></p>
+                <p class="text-center"><img src="img/scissor.png" alt="scissor"></p>
             </div>
         </article>
         <article class="row mar-cus ">
@@ -65,7 +65,7 @@
         </article>
     </main>
 
-    <script src="dom.js"></script>
+    <script src="script/dom.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
