--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/rock.png" alt="rock"></p>
+                <p class="rock text-center player"><img src="img/rock.png" alt="rock"></p>
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="text-center"><img src="img/rock.png" alt="rock"></p>
+                <p class="rock text-center"><img src="img/rock.png" alt="rock"></p>
             </div>
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/paper.png" alt="paper"></p>
+                <p class="paper text-center player"><img src="img/paper.png" alt="paper"></p>
             </div>
             <div class="col">
                 <h1 class="text-center game-result">vs</h1>
             </div>
             <div class="col">
-                <p class="text-center"><img src="img/paper.png" alt="paper"></p>
+                <p class="paper text-center"><img src="img/paper.png" alt="paper"></p>
             </div>
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="text-center"><img src="img/scissor.png" alt="scissor"></p>
+                <p class="scissor text-center player"><img src="img/scissor.png" alt="scissor"></p>
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="text-center"><img src="img/scissor.png" alt="scissor"></p>
+                <p class="scissor text-center"><img src="img/scissor.png" alt="scissor"></p>
             </div>
         </article>
         <article class="row mar-cus ">
