--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="rock text-center player"><img src="img/rock.png" alt="rock"></p>
+                <p class="text-center"><img class='player rock' src="img/rock.png" alt="rock"></p>
             </div>
             <div class="col"></div>
             <div class="col">
@@ -42,10 +42,10 @@
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="paper text-center player"><img src="img/paper.png" alt="paper"></p>
+                <p class="text-center"><img class='player paper ' src="img/paper.png" alt="paper"></p>
             </div>
             <div class="col">
-                <h1 class="text-center game-result">vs</h1>
+                <h1 id='gameResult' class="text-center game-result">vs</h1>
             </div>
             <div class="col">
                 <p class="paper text-center"><img src="img/paper.png" alt="paper"></p>
@@ -53,7 +53,7 @@
         </article>
         <article class="row mar-cus">
             <div class="col">
-                <p class="scissor text-center player"><img src="img/scissor.png" alt="scissor"></p>
+                <p class="text-center"><img class='player scissor ' src="img/scissor.png" alt="scissor"></p>
             </div>
             <div class="col"></div>
             <div class="col">
@@ -61,7 +61,7 @@
             </div>
         </article>
         <article class="row mar-cus ">
-            <p class="text-center mar-aut"><img src="img/refresh.png" alt="refresh"></p>
+            <p class="text-center mar-aut"><img class="refresh" src="img/refresh.png" alt="refresh"></p>
         </article>
     </main>
 
