--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="rock text-center"><img src="img/rock.png" alt="rock"></p>
+                <p class="rock text-center"><img class="computer" src="img/rock.png" alt="rock"></p>
             </div>
         </article>
         <article class="row mar-cus">
@@ -48,7 +48,7 @@
                 <h1 id='gameResult' class="text-center game-result">vs</h1>
             </div>
             <div class="col">
-                <p class="paper text-center"><img src="img/paper.png" alt="paper"></p>
+                <p class="paper text-center"><img class="computer" src="img/paper.png" alt="paper"></p>
             </div>
         </article>
         <article class="row mar-cus">
@@ -57,7 +57,7 @@
             </div>
             <div class="col"></div>
             <div class="col">
-                <p class="scissor text-center"><img src="img/scissor.png" alt="scissor"></p>
+                <p class="scissor text-center"><img class="computer" src="img/scissor.png" alt="scissor"></p>
             </div>
         </article>
         <article class="row mar-cus ">
