make the computer think

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p class="text-center"><img class='player paper ' src="img/paper.png" alt="paper"></p>
             </div>
             <div class="col">
-                <h1 id='gameResult' class="text-center game-result">vs</h1>
+                <h1 id='gameResult' class="text-center game-result displaySize">vs</h1>
             </div>
             <div class="col">
                 <p class="paper text-center"><img class="computer" src="img/paper.png" alt="paper"></p>
